test/fail_compilation/objc/objc_interface3.d
// PLATFORM: osx

extern (Objective-C)
interface A {
	void test(T)(T a) [test:]; // selector defined for template
}
